--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "juego",
+  "name": "tp_algo_1_bomberman",
   "version": "1.0.0",
   "wollokVersion": "3.0.0",
-  "author": "Name",
+  "author": "facuc",
   "license": "ISC"
 }
